force-app/main/default/objects/Object_Mapping__mdt/Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Object Mapping</label>
    <pluralLabel>Object Mappings</pluralLabel>
</CustomObject>