force-app/main/default/objects/Object_Mapping__mdt/fields/JSON_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_SObject_Name__c</fullName>
    <label>JSON SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>