force-app/main/default/objects/Object_Mapping__mdt/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <label>Parent Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>