force-app/main/default/objects/Object_Mapping__mdt/fields/Relationship_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Parent__c</fullName>
    <label>Relationship with Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>